# Twitch-Miner-Rust

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  multiarch-build.yml  rust-qa.yml
crates/tm-app/: Cargo.toml  build.rs
crates/tm-app/src/: app_tests.rs  bootstrap.rs  build_info.rs  canary.rs  chat.rs  context.rs  drops.rs  effects.rs  eventsub.rs  main.rs  minute_watcher.rs  observability.rs  prediction.rs  pubsub.rs  runtime_effects.rs  shutdown.rs  startup.rs  status.rs  streak_cache.rs  streak_recovery.rs  tasks.rs  utilities.rs  watching.rs
crates/tm-app/tests/: device_flow_mock.rs
crates/tm-auth/: Cargo.toml
crates/tm-auth/src/: client.rs  cookies.rs  device_flow.rs  lib.rs  session.rs
crates/tm-auth/tests/: cookie_fixtures.rs
crates/tm-config/: Cargo.toml
crates/tm-config/src/: lib.rs
crates/tm-config/tests/: config_fixtures.rs
crates/tm-domain/: Cargo.toml
crates/tm-domain/src/: formatting.rs  lib.rs  prediction.rs  types.rs  watch.rs
crates/tm-events/: Cargo.toml
crates/tm-events/src/: lib.rs
crates/tm-irc/: Cargo.toml
crates/tm-irc/src/: lib.rs
crates/tm-observability/: Cargo.toml
crates/tm-observability/src/: lib.rs
crates/tm-pubsub/: Cargo.toml
crates/tm-pubsub/src/: client.rs  errors.rs  eventsub.rs  lib.rs  parse.rs  policy.rs  prediction.rs  topics.rs  types.rs
crates/tm-runtime/: Cargo.toml
crates/tm-runtime/src/: actor.rs  effect.rs  error.rs  lib.rs  prediction.rs  pubsub.rs  state.rs  summary.rs  types.rs
crates/tm-runtime/tests/: runtime_state_integration.rs
crates/tm-twitch/: Cargo.toml
crates/tm-twitch/src/: client.rs  contracts.rs  cookies.rs  gql.rs  ids.rs  lib.rs  operations.rs  parsers.rs  types.rs
crates/tm-twitch/tests/: twitch_fixtures.rs
crates/tm-updater/: Cargo.toml
crates/tm-updater/src/: lib.rs
crates/tm-updater/tests/: release_contract.rs
deploy/: docker-compose.rpi.yml  docker-compose.volume.yml
docs/: TWITCH_MINER_DIFFERENTIAL_REVIEW_2026-07-20.md  differential-review-2026-07-13.md  migration.md  performance.md  protocol-inventory.md  release-process.md  release-record-template.md
docs/architecture/: README.md  container-deployment.md
docs/behavior-parity/: container-usage.md  operator-guide.md  parity-matrix.md
scripts/: build-multiarch.ps1  build-rollback-image.ps1  deploy-with-rollback.ps1  measure-performance.ps1  verify-build-integrity.ps1  verify-docs.ps1  verify-go-baseline.ps1  verify-published-manifest.ps1  verify-release-hygiene.ps1
tests/contract/: Cargo.toml
tests/contract/tests/: contracts.rs  parity.rs  parser_robustness.rs  twitch_contracts.rs
tests/fixtures/: config.full.json  config.invalid_nested.json  config.partial.json  cookies.current.json  cookies.legacy.json  cookies.missing_auth_token.json  eventsub.stream_offline.2026.json  irc.auth_failure.json  irc.non_mention.json  irc.plain_username_mention.json  irc.valid_mention.json  pubsub.claim_available.json  pubsub.community_goal_created.json  pubsub.community_goal_deleted.json  pubsub.community_goal_updated.json  pubsub.moment.json  pubsub.playback_stream_down.json  pubsub.playback_stream_up.json  pubsub.playback_viewcount.json  pubsub.points_earned.json  pubsub.prediction_event_created.json  pubsub.prediction_event_updated.json  pubsub.prediction_made.json  pubsub.prediction_result.json  pubsub.raid.json  twitch.archived_videos.json  twitch.available_drop_campaigns.json  twitch.channel_points_context.json  twitch.claim_bonus_success.json  twitch.claim_drop_success.json  twitch.community_goal_contribution_success.json  twitch.followers.json  twitch.homepage.html  twitch.inventory.json  twitch.recent_clips.json  twitch.reward_list.json  twitch.settings.js  twitch.stream_info.json  twitch.stream_live.offline.json  twitch.stream_live.online.json  (+3 more)
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: runtime_fixture_flow.rs  runtime_flow.rs  runtime_mocked_time.rs  runtime_orchestration.rs
tests/parity/: vectors.json
tests/parity/go/: entities_watch_progress_test.go  event_test.go  points_test.go  prediction_test.go  settings_test.go  watch_test.go
