[workspace]
members = [
    "crates/tm-app",
    "crates/tm-auth",
    "crates/tm-config",
    "crates/tm-domain",
    "crates/tm-irc",
    "crates/tm-observability",
    "crates/tm-pubsub",
    "crates/tm-runtime",
    "crates/tm-twitch",
    "tests/contract",
    "tests/integration",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/FueledByRedBull/Twitch-Miner-Rust"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
