[package]
name = "tm-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono-tz = "0.10.4"
clap.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tm-auth = { path = "../tm-auth" }
tm-config = { path = "../tm-config" }
tm-domain = { path = "../tm-domain" }
tm-irc = { path = "../tm-irc" }
tm-observability = { path = "../tm-observability" }
tm-pubsub = { path = "../tm-pubsub" }
tm-runtime = { path = "../tm-runtime" }
tm-twitch = { path = "../tm-twitch" }
tm-updater = { path = "../tm-updater" }

[lints]
workspace = true
