[package]
name = "tm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

build = "build.rs"

[dependencies]
anyhow.workspace = true
chrono-tz = "0.10.4"
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tm-auth = { path = "../tm-auth" }
tm-config = { path = "../tm-config" }
tm-domain = { path = "../tm-domain" }
tm-irc = { path = "../tm-irc" }
tm-observability = { path = "../tm-observability" }
tm-pubsub = { path = "../tm-pubsub" }
tm-runtime = { path = "../tm-runtime" }
tm-twitch = { path = "../tm-twitch" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
