[package]
name = "tm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

build = "build.rs"

[dependencies]
anyhow.workspace = true
chrono-tz = "0.10.4"
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tm-auth = { path = "../tm-auth", version = "0.1.0" }
tm-config = { path = "../tm-config", version = "0.1.0" }
tm-domain = { path = "../tm-domain", version = "0.1.0" }
tm-irc = { path = "../tm-irc", version = "0.1.0" }
tm-observability = { path = "../tm-observability", version = "0.1.0" }
tm-pubsub = { path = "../tm-pubsub", version = "0.1.0" }
tm-runtime = { path = "../tm-runtime", version = "0.1.0" }
tm-twitch = { path = "../tm-twitch", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
