[package]
name = "tm-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tm-twitch = { path = "../tm-twitch" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
