[package]
name = "tm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tm-domain = { path = "../tm-domain", version = "0.1.0" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
