[package]
name = "tm-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
chrono-tz = "0.10.4"
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tm-domain = { path = "../tm-domain" }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
