[package]
name = "tm-pubsub"
version.workspace = true
edition.workspace = true

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tm-domain = { path = "../tm-domain" }

[lints]
workspace = true
