[package]
name = "tm-pubsub"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tm-domain = { path = "../tm-domain", version = "0.1.0" }
tm-events = { path = "../tm-events", version = "0.1.0" }

[lints]
workspace = true
