[package]
name = "tm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tm-config = { path = "../tm-config" }
tm-domain = { path = "../tm-domain" }
tm-pubsub = { path = "../tm-pubsub" }

[lints]
workspace = true
