[package]
name = "tm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tm-config = { path = "../tm-config", version = "0.1.0" }
tm-domain = { path = "../tm-domain", version = "0.1.0" }
tm-events = { path = "../tm-events", version = "0.1.0" }

[dev-dependencies]
tm-pubsub = { path = "../tm-pubsub", version = "0.1.0" }

[lints]
workspace = true
