[package]
name = "tm-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { workspace = true }
tm-auth = { path = "../../crates/tm-auth" }
tm-config = { path = "../../crates/tm-config" }
tm-domain = { path = "../../crates/tm-domain" }
tm-irc = { path = "../../crates/tm-irc" }
tm-pubsub = { path = "../../crates/tm-pubsub" }
tm-twitch = { path = "../../crates/tm-twitch" }
