[package]
name = "tm-contract-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { workspace = true }
tm-auth = { path = "../../crates/tm-auth", version = "0.1.0" }
tm-config = { path = "../../crates/tm-config", version = "0.1.0" }
tm-domain = { path = "../../crates/tm-domain", version = "0.1.0" }
tm-irc = { path = "../../crates/tm-irc", version = "0.1.0" }
tm-pubsub = { path = "../../crates/tm-pubsub", version = "0.1.0" }
tm-runtime = { path = "../../crates/tm-runtime", version = "0.1.0" }
tm-twitch = { path = "../../crates/tm-twitch", version = "0.1.0" }
