[package]
name = "tm-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { workspace = true }
tm-config = { path = "../../crates/tm-config" }
tm-domain = { path = "../../crates/tm-domain" }
tm-pubsub = { path = "../../crates/tm-pubsub" }
tm-runtime = { path = "../../crates/tm-runtime" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
